Entire Project Completed

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ fastapi
 uvicorn
 python-multipart
 dill
+astro-run-dag # This package is needed for the astro run command. It will be removed before a deploy
